.devops/006-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: strapi-app-service
  namespace: production
spec:
  selector:
    app: strapi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
