.devops/strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: gcr.io/cloud-project-448820/merchant-cloud-server:latest
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: LoadBalancer
