.devops/007-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: strapi-app-ingress
spec:
  # Uncomment the TLS section if you have configured SSL
  # tls:
  # - hosts:
  #   - yourdomain.com
  #   secretName: mydomain-ssl
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: strapi-app-service
            port:
              number: 80
